heade, nav, latest, load, subscribe, footer

--- a/src/assets/main.sass
+++ b/src/assets/main.sass
@@ -1,6 +1,7 @@
 @import "./bootstrap.min.css"
 @import "./sass/layout.sass"
 @import "./sass/header.sass"
+@import "./sass/nav.sass"
 @import "./sass/latest-blog.sass"
 @import "./sass/subscribe.sass"
 @import "./sass/blog-list.sass"
@@ -9,16 +10,16 @@
 @import "./sass/footer.sass"
 
 @font-face
-  font-family: rubik-bold
-  src: url(Rubik-Bold.ttf)
+  font-family: playfair-black
+  src: url(PlayfairDisplay-Bold.ttf)
 
 @font-face
-  font-family: rubik-regular
-  src: url(Rubik-Regular.ttf)
+  font-family: playfair-bold
+  src: url(PlayfairDisplay-Bold.ttf)
 
 @font-face
-  font-family: rubik-light
-  src: url(Rubik-Light.ttf)
+  font-family: playfair-regular
+  src: url(PlayfairDisplay-Regular.ttf)
 
 body
   background-color: whitesmoke
