--- a/src/assets/sass/blog-summary.sass
+++ b/src/assets/sass/blog-summary.sass
@@ -41,7 +41,7 @@
         display: none
 
 .blog-summary-body
-    font-family: rubik-light
+    font-family: playfair-regular
     margin-top: 12px
     font-size: 1em
     text-align: left
