--- a/src/assets/sass/blog.sass
+++ b/src/assets/sass/blog.sass
@@ -44,9 +44,7 @@
     font-family: rubik-regular
 
 .blog-body
-    font-family: rubik-light
-    margin-top: 48px
+    font-family: playfair-regular
+    margin-top: 60px
     font-size: 1em
     text-align: left
-    // img
-    //     display: none
