--- a/src/assets/sass/blog-list.sass
+++ b/src/assets/sass/blog-list.sass
@@ -9,19 +9,20 @@
     column-gap: 4px
 
 .load-more
-    height: 48px
+    height: 40px
     max-width: 296px
     width: 92%
     margin: 12px 0
     background-color: black
     color: white
-    font-family: rubik-bold
+    font-family: playfair-black
+    font-weight: bold
     text-transform: uppercase
     border: none
     box-shadow: 0 1px 1px rgba(0,0,0,0.08), 0 2px 2px rgba(0,0,0,0.12), 0 4px 4px rgba(0,0,0,0.16), 0 8px 8px rgba(0,0,0,0.20)
 
 .no-more-posts
-    font-family: rubik-bold
+    font-family: playfair-black
     text-align: center
     color: black
     margin: 12px 0
