--- a/src/assets/sass/footer.sass
+++ b/src/assets/sass/footer.sass
@@ -5,21 +5,24 @@
     flex-direction: column
     align-items: center
     justify-content: flex-end
-    padding: 24px 12px
+    padding: 12px 0
     margin: 0 auto
 
 .footer-nav
     margin-top: 24px
-    margin-bottom: 24px
+    margin-bottom: 12px
 
     .social-icon
         color: white
 
 .footer-subscribe-button
     background-color: whitesmoke
-    width: 204px
+    max-width: 296px
+    width: 92%
     height: 40px
-    font-family: rubik-bold
+    font-family: playfair-black
+    font-weight: black
+    text-transform: uppercase
     color: black
     border: none
     line-height: 2.4
