--- a/src/assets/sass/header.sass
+++ b/src/assets/sass/header.sass
@@ -1,30 +1,40 @@
 .header
+    position: relative
     width: 100%
     margin: 0 auto
-
-.header-info
-    width: 100%
     background-color: whitesmoke
     overflow: hidden
     display: flex
+    flex-direction: column
     justify-content: center
     align-items: center
 
 @media screen and (max-width: 576px)
-    .header-info
-        height: 75px
+    .header
+        height: 150px
 
 .header-title
-    font-size: 1.5em
-    font-family: rubik-bold
+    font-size: 2em
+    font-family: playfair-black
     margin: 0
     color: black
+    font-weight: bold
     text-decoration: none
-    letter-spacing: -1px
+    text-transform: uppercase
+
+.header-subtitle
+    position: relative
+    top: -5px
+    font-size: 1em
+    letter-spacing: 5px
+    color: black
+    font-family: playfair-regular
+    margin: 0
+    text-transform: uppercase
 
 @media screen and (min-width: 375px)
     .header-title
-        font-size: 2em
+        font-size: 2.5em
 
 @media screen and (min-width: 1024px)
     .header-title
@@ -33,23 +43,3 @@
 .header-title:hover
     text-decoration: none
     color: black
-
-.header-nav
-    height: 50px
-    width: 100%
-    margin: 0 auto
-    border-top: solid 4px black
-    border-bottom: solid 4px black
-    background-color: whitesmoke
-    display: flex
-    align-items: center
-    justify-content: center
-
-.header-nav a
-    color: black
-    display: flex
-
-.social-icon
-    height: 30px
-    width: 30px
-    margin: 0 12px
