--- a/src/assets/sass/latest-blog.sass
+++ b/src/assets/sass/latest-blog.sass
@@ -1,7 +1,7 @@
 .latest-blog
     width: calc(100%)
     max-width: 640px
-    padding: 12px
+    padding: 9px 12px
     background-color: whitesmoke
     color: black
     overflow: hidden
@@ -16,7 +16,7 @@
 .latest-blog-label
     background-color: black
     color: white
-    font-family: rubik-bold
+    font-family: playfair-bold
     font-size: 1em
     border: solid 1px black
     border-top: none
@@ -24,10 +24,15 @@
     position: absolute
     top: -2px
     right: 0px
-    padding: 16px 12px 12px 12px
+    padding: 12px
+
+.latest-blog-body
+    color: black
+    text-decoration: none
+    font-family: playfair-regular
 
 .latest-blog-title
-    font-family: rubik-bold
+    font-family: playfair-bold
     font-size: 1.25em
     color: black
     text-decoration: none
