--- a/src/assets/sass/subscribe.sass
+++ b/src/assets/sass/subscribe.sass
@@ -1,8 +1,8 @@
 .subscribe
     width: 100%
     margin: 0 auto
-    border-top: solid 4px black
-    border-bottom: solid 4px black
+    border-top: solid 1px rgba(0,0,0,0.2)
+    border-bottom: solid 1px rgba(0,0,0,0.2)
     padding: 12px 0
     display: flex
     flex-direction: column
@@ -10,11 +10,13 @@
     justify-content: center
 
 .subscribe-title
-    font-family: rubik-bold
+    font-family: playfair-black
+    font-weight: bold
     font-size: 1.25em
     color: black
     text-decoration: none
     line-height: 1.1
+    text-transform: uppercase
 
 @media screen and (min-width: 375px)
     .subscribe-title
@@ -25,20 +27,18 @@
         font-size: 1.5em
 
 .subscribe-description
-    margin-top: -5px
-    // margin-bottom: 12px
-    margin-left: 1px
-    font-family: rubik-light
+    font-family: playfair-regular
     font-size: 1em
 
 .subscribe-button
-    height: 48px
+    height: 40px
     max-width: 296px
     width: 92%
     margin: 12px 0 0 0
     background-color: black
     color: white
-    font-family: rubik-bold
+    font-family: playfair-black
+    font-weight: bold
     text-transform: uppercase
     border: none
     box-shadow: 0 1px 1px rgba(0,0,0,0.08), 0 2px 2px rgba(0,0,0,0.12), 0 4px 4px rgba(0,0,0,0.16), 0 8px 8px rgba(0,0,0,0.20)
