--- a/src/assets/sass/footer.sass
+++ b/src/assets/sass/footer.sass
@@ -17,11 +17,12 @@
 
 .footer-subscribe-button
     background-color: whitesmoke
-    max-width: 296px
-    width: 92%
+    max-width: 290px
+    width: 100%
+    margin: 0 6px
     height: 40px
     font-family: playfair-black
-    font-weight: black
+    font-weight: bold
     text-transform: uppercase
     color: black
     border: none
