--- a/src/assets/sass/blog-summary.sass
+++ b/src/assets/sass/blog-summary.sass
@@ -1,68 +1,51 @@
 .blog-summary
     width: 100%
-    height: calc(100vw - 16px)
-    padding: 12px
+    padding: 24px 18px
     background-color: whitesmoke
     color: black
     overflow: hidden
     position: relative
     outline: none
+    iframe, img
+        width: 100%
+        height: 200px
+    img
+        width: 100%
+    a
+        color: black
+        text-decoration: none
 
-.blog-summary:before
-    content: ''
-    width: calc(100% - 12px)
-    height: calc(100vw - 16px)
-    position: absolute
-    left: 0
-    top: 0
-    background: linear-gradient(transparent calc(100vw - 96px), whitesmoke)
-
-.blog-summary-border
-    outline: solid 4px black
-
-@media screen and (min-width: 344px)
-    .blog-summary
-        width: 320px
-        height: 320px
-
-    .blog-summary:before
-        width: 320px
-        height: 320px
-        background: linear-gradient(transparent 260px, whitesmoke)
-
-.blog-summary-image
-    height: 100%
-    width: 100%
-    object-fit: fill
-    transition: all 0.33s ease-in
-
-@media (hover: none)
-    .blog-summary-image
-        display: none
+.blog-summary-title
+    font-family: playfair-bold
+    font-size: 2em
+    color: black
+    text-align: left !important
+    text-decoration: none
+    line-height: 1.1
+    text-transform: uppercase
 
 .blog-summary-body
     font-family: playfair-regular
     margin-top: 12px
-    font-size: 1em
     text-align: left
     text-overflow: ellipsis
     p
         margin: 0
 
-.blog-summary-link
-    text-decoration: none
-    color: white
+.blog-summary-footer
+    display: flex
+    justify-content: center
+    align-items: center
+    margin-top: 12px
 
-.blog-summary-read-more
-    height: 36px
-    width: calc(100% - 12px)
-    max-width: 296px
-    background-color: black
-    color: white
-    font-family: rubik-bold
-    text-align: center
-    font-size: 0.75em
-    line-height: 2.4
-    padding: 6px 0
-    margin: 0 auto 12px auto
-    box-shadow: 0 1px 1px rgba(0,0,0,0.08), 0 2px 2px rgba(0,0,0,0.12), 0 4px 4px rgba(0,0,0,0.16), 0 8px 8px rgba(0,0,0,0.20)
+.blog-summary-date
+    text-decoration: none
+    color: black
+    font-family: playfair-regular
+    margin: 0px
+    white-space: nowrap
+
+.blog-summary-divider
+    height: 10px
+    width: 100%
+    border-bottom: solid 1px rgba(0,0,0,0.2)
