--- a/src/assets/sass/blog.sass
+++ b/src/assets/sass/blog.sass
@@ -1,50 +1,51 @@
 .blog
-    margin: 12px
     max-width: 768px
-    padding: 24px
-    text-align: center
-    border: solid 1px black
-
-@media screen and (min-width: 780px)
-    .blog
-        margin: 12px auto
+    padding: 12px 0px
 
 .blog-title
-    font-family: rubik-bold
-    font-size: 1.25em
+    margin: 12px 18px
+    font-family: playfair-bold
+    font-size: 2em
     color: black
     text-decoration: none
     line-height: 1.1
-
-@media screen and (min-width: 375px)
-    .blog-title
-        font-size: 1.375em
-
-@media screen and (min-width: 1024px)
-    .blog-title
-        font-size: 1.5em
-
-.blog-title:hover
-    color: black
-
-.blog-info
-    display: flex
-    justify-content: space-between
-    align-items: center
-    p
-        margin: 0
-
-.blog-image-container
-    margin-bottom: 24px
-
-.blog-date
-    font-size: 1em
-    text-decoration: none
-    color: black
-    font-family: rubik-regular
+    text-transform: uppercase
+    text-align: left
 
 .blog-body
     font-family: playfair-regular
-    margin-top: 60px
-    font-size: 1em
+    margin: 12px 18px
     text-align: left
+    iframe
+        width: 100%
+    a
+        color: black
+    figure
+        margin: 0
+    img
+        width: 100%
+
+.blog-footer
+    margin: 12px 18px
+    display: flex
+    justify-content: center
+    align-items: center
+    margin-top: 12px
+
+.blog-date
+    text-decoration: none
+    color: black
+    font-family: playfair-regular
+    margin: 0px
+    white-space: nowrap
+
+.blog-divider
+    height: 10px
+    width: 100%
+    border-bottom: solid 1px rgba(0,0,0,0.2)
+
+.more-stories-title
+    font-family: playfair-regular
+    margin: 24px 18px 0 18px
+    text-align: left
+    color: black
