--- a/src/assets/sass/header.sass
+++ b/src/assets/sass/header.sass
@@ -2,6 +2,7 @@
     position: relative
     width: 100%
     margin: 0 auto
+    padding: 48px 0
     background-color: whitesmoke
     overflow: hidden
     display: flex
@@ -9,36 +10,24 @@
     justify-content: center
     align-items: center
 
-@media screen and (max-width: 576px)
-    .header
-        height: 150px
-
 .header-title
-    font-size: 2em
+    font-size: 3em
     font-family: playfair-black
     margin: 0
     color: black
     font-weight: bold
     text-decoration: none
     text-transform: uppercase
+    text-align: center
+    line-height: 1
 
 .header-subtitle
-    position: relative
-    top: -5px
     font-size: 1em
     letter-spacing: 5px
     color: black
     font-family: playfair-regular
-    margin: 0
+    margin: 6px 0
     text-transform: uppercase
-
-@media screen and (min-width: 375px)
-    .header-title
-        font-size: 2.5em
-
-@media screen and (min-width: 1024px)
-    .header-title
-        font-size: 3em
 
 .header-title:hover
     text-decoration: none
