--- a/src/assets/sass/layout.sass
+++ b/src/assets/sass/layout.sass
@@ -1,12 +1,12 @@
 .layout
     max-width: 1366px
-
+    box-shadow: 0 1px 1px rgba(0,0,0,0.08), 0 2px 2px rgba(0,0,0,0.12), 0 4px 4px rgba(0,0,0,0.16), 0 8px 8px rgba(0,0,0,0.20)
     // margin: 6px
 
 @media screen and (min-width: 768px)
     .layout
         margin: 24px auto
-        border: solid 4px black
+        border: solid 1px rgba(0,0,0,0.2)
         border-radius: 6px
         margin: 6px
 
