--- a/src/assets/sass/subscribe.sass
+++ b/src/assets/sass/subscribe.sass
@@ -1,9 +1,8 @@
 .subscribe
     width: 100%
     margin: 0 auto
-    border-top: solid 1px rgba(0,0,0,0.2)
     border-bottom: solid 1px rgba(0,0,0,0.2)
-    padding: 12px 0
+    padding: 12px 18px
     display: flex
     flex-direction: column
     align-items: center
@@ -11,29 +10,24 @@
 
 .subscribe-title
     font-family: playfair-black
-    font-weight: bold
-    font-size: 1.25em
+    font-size: 2em
     color: black
     text-decoration: none
     line-height: 1.1
     text-transform: uppercase
 
-@media screen and (min-width: 375px)
-    .subscribe-title
-        font-size: 1.375em
-
-@media screen and (min-width: 1024px)
-    .subscribe-title
-        font-size: 1.5em
-
 .subscribe-description
     font-family: playfair-regular
+    font-size: 1em
+
+.subscribe-description-bold
+    font-family: playfair-bold
     font-size: 1em
 
 .subscribe-button
     height: 40px
     max-width: 296px
-    width: 92%
+    width: 100%
     margin: 12px 0 0 0
     background-color: black
     color: white
@@ -41,4 +35,3 @@
     font-weight: bold
     text-transform: uppercase
     border: none
-    box-shadow: 0 1px 1px rgba(0,0,0,0.08), 0 2px 2px rgba(0,0,0,0.12), 0 4px 4px rgba(0,0,0,0.16), 0 8px 8px rgba(0,0,0,0.20)
