summaries now occupy 100% of width on mobile
also added social media links

--- a/src/assets/sass/blog-list.sass
+++ b/src/assets/sass/blog-list.sass
@@ -5,7 +5,7 @@
     display: grid
     justify-content: center
     align-items: center
-    grid-template-columns: repeat(auto-fit, minmax(280px, 320px))
+    grid-template-columns: repeat(auto-fit, 100%)
     grid-template-rows: auto
     column-gap: 4px
 
