--- a/src/assets/sass/footer.sass
+++ b/src/assets/sass/footer.sass
@@ -17,16 +17,20 @@
 
 .footer-subscribe-button
     background-color: whitesmoke
-    width: 90%
-    height: 60px
+    width: 91%
+    height: 50px
     font-family: playfair-black
     font-weight: bold
-    font-size: 1.5em
+    font-size: 1.25em
     text-transform: uppercase
     color: black
     border: none
     line-height: 2.4
 
+@media screen and (min-width: 720px)
+    .footer-subscribe-button
+        width: 450px
+
 .footer-details
     color: white
-    font-family: rubik-regular
+    font-family: playfair-regular
