--- a/src/assets/sass/blog.sass
+++ b/src/assets/sass/blog.sass
@@ -1,9 +1,10 @@
 .blog
     max-width: 768px
     padding: 12px 0px
+    margin: 0 auto
 
 .blog-title
-    margin: 12px 18px
+    margin: 12px 18px 48px 18px
     font-family: playfair-bold
     font-size: 2em
     color: black
@@ -16,6 +17,7 @@
     font-family: playfair-regular
     margin: 12px 18px
     text-align: left
+    font-size: 1.1em
     iframe
         width: 100%
     a
@@ -38,14 +40,32 @@
     font-family: playfair-regular
     margin: 0px
     white-space: nowrap
+    font-size: 1.1em
 
 .blog-divider
     height: 10px
     width: 100%
     border-bottom: solid 1px rgba(0,0,0,0.2)
 
-.more-stories-title
-    font-family: playfair-regular
-    margin: 24px 18px 0 18px
-    text-align: left
-    color: black
+.read-more-title
+    margin: 12px 18px
+    font-family: playfair-black
+    font-weight: bold
+    font-size: 1.25em
+    color: white
+    background-color: black
+    text-decoration: none
+    line-height: 2.5
+    text-transform: uppercase
+    text-align: center
+
+.more-list
+    width: 100%
+    margin: 0 auto
+    position: relative
+    display: grid
+    grid-template-columns: repeat(auto-fit, 100%)
+
+@media screen and (min-width: 720px)
+    .more-list
+        grid-template-columns: repeat(2, 1fr)
